0.8/_sources/api/generated/deepchecks.tabular.checks.model_evaluation.WeakSegmentsPerformance.rst.txt

WeakSegmentsPerformance
=======================



.. currentmodule:: deepchecks.tabular.checks.model_evaluation

.. autoclass:: WeakSegmentsPerformance
   :special-members: __init__







.. rubric:: Methods

.. autosummary::
   :toctree:

   
   
   WeakSegmentsPerformance.add_condition
   
   
   WeakSegmentsPerformance.add_condition_segments_relative_performance_greater_than
   
   
   WeakSegmentsPerformance.clean_conditions
   
   
   WeakSegmentsPerformance.conditions_decision
   
   
   WeakSegmentsPerformance.metadata
   
   
   WeakSegmentsPerformance.name
   
   
   WeakSegmentsPerformance.params
   
   
   WeakSegmentsPerformance.remove_condition
   
   
   WeakSegmentsPerformance.run
   
   
   WeakSegmentsPerformance.run_logic
   
















Examples
~~~~~~~~

.. raw:: html

    <div class="sphx-glr-thumbcontainer">

.. only:: html

 .. figure:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_weak_segments_performance_thumb.png
     :alt: WeakSegmentsPerformance

     :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_weak_segments_performance.py`

.. raw:: html

    </div>
    <div style="clear:both"></div>


