0.14/_sources/api/generated/deepchecks.tabular.checks.model_evaluation.WeakSegmentsPerformance.rst.txt

WeakSegmentsPerformance
=======================



.. currentmodule:: deepchecks.tabular.checks.model_evaluation

.. autoclass:: WeakSegmentsPerformance
   :special-members: __init__



.. rubric:: Attributes

.. autosummary::
   :toctree:

   
   WeakSegmentsPerformance.categorical_aggregation_threshold
   

   
   WeakSegmentsPerformance.min_category_size_ratio
   

   
   WeakSegmentsPerformance.n_to_show
   

   
   WeakSegmentsPerformance.n_top_features
   

   
   WeakSegmentsPerformance.random_state
   

   
   WeakSegmentsPerformance.segment_minimum_size_ratio
   






.. rubric:: Methods

.. autosummary::
   :toctree:

   
   
   WeakSegmentsPerformance.add_condition
   
   
   WeakSegmentsPerformance.add_condition_segments_relative_performance_greater_than
   
   
   WeakSegmentsPerformance.clean_conditions
   
   
   WeakSegmentsPerformance.conditions_decision
   
   
   WeakSegmentsPerformance.config
   
   
   WeakSegmentsPerformance.from_config
   
   
   WeakSegmentsPerformance.from_json
   
   
   WeakSegmentsPerformance.metadata
   
   
   WeakSegmentsPerformance.name
   
   
   WeakSegmentsPerformance.params
   
   
   WeakSegmentsPerformance.remove_condition
   
   
   WeakSegmentsPerformance.run
   
   
   WeakSegmentsPerformance.run_logic
   
   
   WeakSegmentsPerformance.to_json
   
















Examples
~~~~~~~~

.. raw:: html

    <div class="sphx-glr-thumbcontainer">

.. only:: html

 .. figure:: /tabular/auto_checks/model_evaluation/images/thumb/sphx_glr_plot_weak_segments_performance_thumb.png
     :alt: WeakSegmentsPerformance

     :ref:`sphx_glr_tabular_auto_checks_model_evaluation_plot_weak_segments_performance.py`

.. raw:: html

    </div>
    <div style="clear:both"></div>


